# allotment

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: deployment.md  process-notes.md
docs/plans/: 2026-06-22-allotment-v1.md
docs/research/: 2026-06-25-accuracy-or-fairness-blog-draft.md  2026-06-25-blue-democracy-simulated-annealing.md
docs/specs/: 2026-06-22-allotment-sortition-design.md
src/allotment/: cli.py  config.py  crypto.py  domain.py  pool_csv.py  quotas.py
src/allotment/adapters/: base.py  export.py  harmonica.py
src/allotment/api/: app.py  auth.py  routes.py  schemas.py
src/allotment/db/: models.py  repo.py  session.py
src/allotment/selection_core/: audit.py  maximin.py  panels.py
tests/: conftest.py  test_api.py  test_audit.py  test_auth.py  test_domain.py  test_export.py  test_harmonica.py  test_maximin.py  test_panels.py  test_pool_csv.py  test_quotas.py  test_repo.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  api.ts  index.css
ui/src/components/: Disclosure.tsx
ui/src/steps/: Assembly.tsx  Audit.tsx  Draw.tsx  Handoff.tsx  Pool.tsx  Quotas.tsx
