[project]
name = "allotment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111", "uvicorn[standard]>=0.30", "pydantic>=2.7",
  "pydantic-settings>=2.3", "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1", "pulp>=2.8", "cryptography>=42", "httpx>=0.27",
]
[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.5", "mypy>=1.10", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["pulp.*"]
ignore_missing_imports = true
